[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/level.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Spikes.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/BossEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://DoorConnections/01_link_02.tres" type="Resource" id=5]
[ext_resource path="res://Levels/level_02.gd" type="Script" id=6]
[ext_resource path="res://World/Trigger.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Trigger.gd" type="Script" id=8]
[ext_resource path="res://World/TileMap.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 5 )

[node name="level_02" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -131072, 0, 0, -131071, 0, 1, -131070, 0, 1, -131069, 0, 1, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 1, -131064, 0, 1, -131063, 0, 1, -131062, 0, 1, -131061, 0, 1, -131060, 0, 1, -131059, 0, 1, -131058, 0, 1, -131057, 0, 1, -131056, 0, 1, -131055, 0, 1, -131054, 0, 1, -131053, 0, 1, -131052, 0, 1, -131051, 0, 1, -131050, 0, 1, -131049, 0, 1, -131048, 0, 1, -131047, 0, 1, -131046, 0, 1, -131045, 0, 1, -131044, 0, 1, -131043, 0, 1, -131042, 0, 1, -131041, 0, 2, -1, 0, 0, -65536, 0, 65545, -65535, 0, 131073, -65534, 0, 131073, -65533, 0, 131073, -65532, 0, 65542, -65531, 0, 65541, -65530, 0, 131073, -65529, 0, 131073, -65528, 0, 131073, -65527, 0, 131073, -65526, 0, 131073, -65525, 0, 131073, -65524, 0, 131073, -65523, 0, 131073, -65522, 0, 131073, -65521, 0, 65544, -65520, 0, 131073, -65519, 0, 65544, -65518, 0, 131073, -65517, 0, 131073, -65516, 0, 131073, -65515, 0, 131073, -65514, 0, 65542, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65538, 65535, 0, 65536, 0, 0, 65538, 4, 0, 131072, 5, 0, 131074, 15, 0, 131075, 17, 0, 131075, 22, 0, 131072, 23, 0, 131073, 24, 0, 131073, 25, 0, 131073, 26, 0, 131073, 27, 0, 131073, 28, 0, 131073, 29, 0, 65542, 30, 0, 65537, 31, 0, 65538, 131071, 0, 65536, 65536, 0, 65538, 65565, 0, 131072, 65566, 0, 65542, 65567, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131102, 0, 65536, 131103, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 196638, 0, 65536, 196639, 0, 65538, 327679, 0, 131072, 262144, 0, 65543, 262174, 0, 65536, 262175, 0, 65538, 327680, 0, 65539, 327710, 0, 65536, 327711, 0, 65538, 458750, 0, 0, 458751, 0, 1, 393216, 0, 131079, 393246, 0, 65536, 393247, 0, 65538, 524286, 0, 131072, 524287, 0, 131073, 458752, 0, 131074, 458782, 0, 65536, 458783, 0, 65538, 524298, 0, 0, 524299, 0, 2, 524310, 0, 0, 524311, 0, 1, 524312, 0, 1, 524313, 0, 2, 524318, 0, 65536, 524319, 0, 65538, 589827, 0, 0, 589828, 0, 1, 589829, 0, 2, 589834, 0, 65536, 589835, 0, 131077, 589836, 0, 2, 589841, 0, 0, 589842, 0, 1, 589843, 0, 1, 589844, 0, 1, 589845, 0, 1, 589846, 0, 131078, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 131077, 589850, 0, 1, 589851, 0, 1, 589852, 0, 1, 589853, 0, 1, 589854, 0, 131078, 589855, 0, 65538, 720894, 0, 0, 720895, 0, 1, 655360, 0, 1, 655361, 0, 1, 655362, 0, 1, 655363, 0, 131078, 655364, 0, 65537, 655365, 0, 131077, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 131078, 655371, 0, 65537, 655372, 0, 131077, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 131078, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65541, 655382, 0, 131073, 655383, 0, 131073, 655384, 0, 131073, 655385, 0, 65542, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65541, 655390, 0, 131073, 655391, 0, 131074, 786430, 0, 131072, 786431, 0, 131073, 720896, 0, 131073, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 131073, 720908, 0, 131073, 720909, 0, 131073, 720910, 0, 131073, 720911, 0, 131073, 720912, 0, 131073, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 0, 65544, 720917, 0, 131074, 720921, 0, 131072, 720922, 0, 131073, 720923, 0, 131073, 720924, 0, 131073, 720925, 0, 131074, 786452, 0, 131075 )

[node name="BossEnemy" parent="." index="1" instance=ExtResource( 4 )]
position = Vector2( 175, 51 )
MAX_SPEED = 25

[node name="EnemyStats" parent="BossEnemy" index="4"]
max_health = 10

[node name="Spikes" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 32, 0 )
rotation = 1.5708

[node name="Spikes2" parent="Spikes" index="2" instance=ExtResource( 3 )]
position = Vector2( 16, 0 )

[node name="Spikes3" parent="Spikes" index="3" instance=ExtResource( 3 )]
position = Vector2( 32, 0 )

[node name="Spikes4" parent="Spikes" index="4" instance=ExtResource( 3 )]
position = Vector2( 48, -3.8147e-06 )

[node name="Spikes5" parent="Spikes" index="5" instance=ExtResource( 3 )]
position = Vector2( 48, -432 )
rotation = 3.14159

[node name="Spikes6" parent="Spikes" index="6" instance=ExtResource( 3 )]
position = Vector2( 64, -432 )
rotation = 3.14159

[node name="Spikes7" parent="Spikes" index="7" instance=ExtResource( 3 )]
position = Vector2( 80, -432 )
rotation = 3.14159

[node name="Spikes8" parent="Spikes" index="8" instance=ExtResource( 3 )]
position = Vector2( 96, -432 )
rotation = 3.14159

[node name="Spikes9" parent="Spikes" index="9" instance=ExtResource( 3 )]
position = Vector2( 16, -304 )
rotation = 3.14159

[node name="Door" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( -24, 144 )
scale = Vector2( -1, 1 )
connection = ExtResource( 5 )
new_level_path = "res://Levels/level_01.tscn"

[node name="Trigger" parent="." index="4" instance=ExtResource( 7 )]
position = Vector2( 20, 144 )
rotation = 1.5708
script = ExtResource( 8 )

[node name="CollisionShape2D" parent="Trigger" index="0"]
shape = SubResource( 1 )

[node name="BlockDoor" parent="." index="5" instance=ExtResource( 9 )]
visible = false
collision_layer = 0
tile_data = PoolIntArray( 589823, 0, 3, 655359, 0, 131075 )

[connection signal="died" from="BossEnemy" to="." method="_on_BossEnemy_died"]
[connection signal="area_triggerd" from="Trigger" to="." method="_on_Trigger_area_triggerd"]
[connection signal="body_entered" from="Trigger" to="Trigger" method="_on_Trigger_body_entered"]

[editable path="BossEnemy"]
[editable path="BossEnemy/HurtBox"]
[editable path="BossEnemy/HitBox"]
[editable path="Trigger"]
